[src/Makefile.am.analysis] Fix typos and improve scripts

--- a/src/Makefile.am.analysis
+++ b/src/Makefile.am.analysis
@@ -2,20 +2,18 @@
 SPARSE = sparse
 sparse:
 	@status=true; for f in $(enabled_cairo_sources); do \
-		echo sparse $$f; \
+		echo $(SPARSE) $$f; \
 		$(SPARSE) -I$(top_builddir) $(AM_CPPFLAGS) -DHAVE_CONFIG_H $$f || status=false; \
 	done; $$status
 
 SPLINT = splint -badflag
 splint:
 	@status=true; for f in $(enabled_cairo_sources); do \
-		test "$$f" = "`echo "$$f" | sed 's/[.]h$$//'`" || continue; \
-		echo sparse $$f; \
+		echo $(SPLINT) $$f; \
 		$(SPLINT) -I$(top_builddir) $(AM_CPPFLAGS) -DHAVE_CONFIG_H $$f || status=false; \
 	done; $$status
 
 UNO = uno
 uno:
 	@cpp_flags=`echo $(AM_CPPFLAGS) | sed 's/\(-I.*\) /\1 /g'`; \
-	files=`echo $(enabled_cairo_sources) | sed 's/[^ ]*\.h//g'`; \
-	$(UNO) -I$(top_builddir) $$cpp_flags -DHAVE_CONFIG_H -U__GNUC__ $$files
+	$(UNO) -I$(top_builddir) $$cpp_flags -DHAVE_CONFIG_H -U__GNUC__ $(enabled_cairo_sources)
