[Makefile.am] Add CAIRO_LIBS to check-link.
With --enable-gcov, make check aborts with gcov errors on check-link - it
appears that -lgcov is magic and requires explicit invovation on the
command-line.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -77,7 +77,7 @@ endif
 
 EXTRA_DIST += $(TESTS_SH) check-has-hidden-symbols.c
 check_PROGRAMS += check-link
-check_link_LDADD = libcairo.la
+check_link_LDADD = libcairo.la $(CAIRO_LIBS)
 
 
 # The pre-processed result is used by check-{def,plt}.sh to determine whether
