Workaround undefined functions required by rsvg & poppler.
If the native windowing system is disable (e.g. --disable-xlib) then the
test suite fails to build since the vector converters typically depend
upon gdk-pixbuf-2.0, which in turn depends upon a native gdk which
requires cairo to be built with support for the native windowing system. A
mess that should be resolved by separating rsvg and poppler into core and
higher-level libraries, but which we can workaround by simply ignoring
errors from undefined functions at link time.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -883,6 +883,7 @@ if BUILD_ANY2PPM
 check_PROGRAMS += any2ppm
 any2ppm_CFLAGS = $(POPPLER_CFLAGS) $(LIBRSVG_CFLAGS)
 # add LDADD, so poppler/librsvg uses "our" cairo
+any2ppm_LDFLAGS = $(CAIRO_TEST_UNDEFINED_LDFLAGS)
 any2ppm_LDADD  = $(LDADD) $(POPPLER_LIBS) $(LIBRSVG_LIBS)
 endif
 
@@ -890,6 +891,7 @@ if CAIRO_CAN_TEST_PDF_SURFACE
 check_PROGRAMS += pdf2png
 pdf2png_CFLAGS = $(POPPLER_CFLAGS)
 # add LDADD, so poppler uses "our" cairo
+pdf2png_LDFLAGS = $(CAIRO_TEST_UNDEFINED_LDFLAGS)
 pdf2png_LDADD  = $(LDADD) $(POPPLER_LIBS)
 endif
 
@@ -897,6 +899,7 @@ if CAIRO_CAN_TEST_SVG_SURFACE
 check_PROGRAMS += svg2png
 svg2png_CFLAGS = $(LIBRSVG_CFLAGS)
 # add LDADD, so librsvg uses "our" cairo
+svg2png_LDFLAGS = $(CAIRO_TEST_UNDEFINED_LDFLAGS)
 svg2png_LDADD  = $(LDADD) $(LIBRSVG_LIBS)
 endif
 
