--- a/util/Makefile.am
+++ b/util/Makefile.am
@@ -1,6 +1,6 @@
 include $(top_srcdir)/build/Makefile.am.common
 
-util: malloc-stats.so
+util: malloc-stats.so backtrace-symbols.so
 
 .la.so:
 	$(RM) $@
@@ -8,18 +8,15 @@ util: malloc-stats.so
 
 CLEANFILES += *.so
 
-SOLDFLAGS = -module -avoid-version -export-dynamic -rpath /dev/null
+# The -rpath is needed to build shared objects that are not installed,
+# ie. with EXTRA_LTLIBRARIES
+AM_LDFLAGS = -module -avoid-version -export-dynamic -rpath /dev/null
 
 EXTRA_LTLIBRARIES += malloc-stats.la backtrace-symbols.la
 
-
-backtrace_symbols_la_LDFLAGS = $(SOLDFLAGS)
 backtrace_symbols_la_LIBADD  = -lbfd -liberty
-backtrace_symbols_la_SOURCES = backtrace-symbols.c
 
-malloc_stats_la_LDFLAGS = $(SOLDFLAGS)
-malloc_stats_la_LIBADD  = $(backtrace_symbols_la_LIBADD)
-malloc_stats_la_SOURCES = $(backtrace_symbols_la_SOURCES) malloc-stats.c
+malloc_stats_la_LIBADD  = $(backtrace_symbols_la_LIBADD) backtrace-symbols.lo
 
 EXTRA_DIST += \
 	xr2cairo \
