Revert "[Makefile.am] Add CAIRO_LIBS to check-link."
This reverts commit a341cb5a98e3eadd5ccb47f9b1e696cb52f7ce9e.
The change introduced in that commit should not be needed and libtool
should just do the right thing.  I cannot reproduce the problem
Chris was having no matter how hard I tried.

--- a/boilerplate/Makefile.am
+++ b/boilerplate/Makefile.am
@@ -53,4 +53,4 @@ TESTS += check-link$(EXEEXT)
 endif
 
 check_PROGRAMS += check-link
-check_link_LDADD = libcairoboilerplate.la $(CAIRO_LIBS)
+check_link_LDADD = libcairoboilerplate.la
