[test] Check set_operator()
Draw a pair of rectangles with each operator in turn - seems to trigger an
issue with the PDF/PS backends.

--- a/test/.gitignore
+++ b/test/.gitignore
@@ -128,6 +128,8 @@ multi-page.pdf
 multi-page.ps
 new-sub-path
 nil-surface
+operator
+operator-alpha
 operator-clear
 operator-source
 over-above-source
