[test] Add rectilinear-fill
Add a test-case to exercise pixel-aligned fills to verify the optimised
rectilinear filler.

--- a/test/.gitignore
+++ b/test/.gitignore
@@ -168,6 +168,7 @@ svg-surface-source.svg
 pixman-rotate
 pthread-show-text
 rectangle-rounding-error
+rectilinear-fill
 rectilinear-miter-limit
 rectilinear-stroke
 reflected-stroke
