Make sure (and check) that all private headers include some cairo header first
The macros CAIRO_BEGIN_DECLS and CAIRO_END_DECLS are declared in two
places: config.h and cairo.h.  On Win32 build there is no config.h.  So,
we can't rely on pulling CAIRO_BEGIN_DECLS from there.  Hence, we now:

  * Not add those declarations to config.h anymore,

  * Test that every cairo private header includes some other cairo
    header before any other includes.

These two are fairly enough to ensure that cairo.h is seen from all
private headers.  There's still the case of headers not including
any header file at all.  I'll fix that later.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -72,7 +72,7 @@ TESTS_SH = \
 	check-def.sh \
 	check-plt.sh \
 	check-headers.sh \
-	check-cairoint.sh \
+	check-includes.sh \
 	check-doc-syntax.sh\
 	$(NULL)
 TESTS += $(TESTS_SH)
