Make sure feature macros are checked using #if, not #ifdef; add a test for it
This is more robust to cases where people want to assign 0 to those variables.
(win32/alternate build systems, etc)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -70,10 +70,10 @@ TESTS_ENVIRONMENT = \
 	$(NULL)
 TESTS_SH = \
 	check-def.sh \
-	check-plt.sh \
-	check-headers.sh \
-	check-includes.sh \
 	check-doc-syntax.sh\
+	check-headers.sh \
+	check-plt.sh \
+	check-preprocessor-syntax.sh \
 	$(NULL)
 TESTS += $(TESTS_SH)
 if CROSS_COMPILING
