Add cairo-system.c for platform system-specific code
This is where DLL initialization/finalization should be done for example.
Moved the one for win32.  For OS/2 just left a comment as the code needs
more work.

This change simplifies building shared and static libraries in the win32
makefiles.

--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -134,6 +134,7 @@ cairo_sources = \
 	cairo-stroke-style.c \
 	cairo-surface.c \
 	cairo-surface-fallback.c \
+	cairo-system.c \
 	cairo-traps.c \
 	cairo-unicode.c \
 	cairo-user-font.c \
