Rename Makefile.*.config to Makefile.*.features as they should not be modified
The .config naming was giving people the impression that they can modify it.
That's not the case.

--- a/doc/public/Makefile.am
+++ b/doc/public/Makefile.am
@@ -1,5 +1,5 @@
 include $(top_srcdir)/build/Makefile.am.common
-include $(top_srcdir)/src/Makefile.am.config
+include $(top_srcdir)/src/Makefile.am.features
 
 # The name of the module.
 DOC_MODULE=cairo
