[build] Add Makefile.win32.common

--- a/Makefile.win32
+++ b/Makefile.win32
@@ -1,34 +1,7 @@
-#
-# Win32 makefile
-#
-
-CC := cl
-LINK := link
-
-ifeq ($(CFG),debug)
-OPT := -Od -Zi
-else
-OPT := -O2
-endif
-
-PIXMAN_CFLAGS := -I../../pixman/pixman
-PIXMAN_LIBS := ../../pixman/pixman/$(CFG)/pixman-1.lib
-
-EXE_LDFLAGS = libpng.lib zlib.lib gdi32.lib msimg32.lib user32.lib
-
-DEFAULT_CFLAGS = -MD -nologo $(OPT)
-DEFAULT_CFLAGS += -D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_DEPRECATE
-DEFAULT_CFLAGS += -I. 
-DEFAULT_CFLAGS += $(PIXMAN_CFLAGS)
-
-CFLAGS := $(DEFAULT_CFLAGS)
-
-
-# Only if this was called as the top-level makefile
-ifeq ($(SUBMAKEFILE),)
+top_srcdir = .
+include $(top_srcdir)/build/Makefile.win32.common
 
 SUBDIRS = src
-
 TEST_SUBDIRS = boilerplate test
 
 all: inform cairo
@@ -52,29 +25,3 @@ test: cairo
 
 html:
 	@(cd test ; make -f Makefile.win32 html)
-
-inform:
-ifneq ($(CFG),release)
-ifneq ($(CFG),debug)
-	@echo "Invalid configuration "$(CFG)" specified."
-	@echo -n "You must specify a configuration when "
-	@echo "running make, e.g. make CFG=debug"
-	@echo
-	@echo -n "Possible choices for configuration are "
-	@echo "'release' and 'debug'"
-	@exit 1
-endif
-endif
-
-endif
-
-# Some generic rules
-
-$(CFG)/%.obj: %.c
-	@mkdir -p $(CFG)
-	@$(CC) $(CFLAGS) -c -Fo"$@" $<
-
-$(CFG)/%-static.obj: %.c
-	@mkdir -p $(CFG)
-	@$(CC) $(CFLAGS) -c -DCAIRO_WIN32_STATIC_BUILD=1 -Fo"$@" $<
-
