--- a/boilerplate/Makefile.win32
+++ b/boilerplate/Makefile.win32
@@ -1,6 +1,5 @@
-SUBMAKEFILE = 1
-
-include ../Makefile.win32
+top_srcdir = ..
+include $(top_srcdir)/build/Makefile.win32.common
 include Makefile.win32.config
 
 CFLAGS += -I../src
@@ -18,19 +17,3 @@ all: $(CFG)/boiler.lib
 
 $(CFG)/boiler.lib: $(OBJECTS)
 	lib -NOLOGO -OUT:$@ $(OBJECTS) $(WIN_LIBS)
-
-clean:
-	@rm -f $(CFG)/*.obj $(CFG)/*.dll $(CFG)/*.lib $(CFG)/*.pdb $(CFG)/*.ilk || exit 0
-
-inform:
-ifneq ($(CFG),release)
-ifneq ($(CFG),debug)
-	@echo "Invalid configuration "$(CFG)" specified."
-	@echo -n "You must specify a configuration when "
-	@echo "running make, e.g. make CFG=debug"
-	@echo
-	@echo -n "Possible choices for configuration are "
-	@echo "'release' and 'debug'"
-	@exit 1
-endif
-endif
