--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,6 +3,9 @@
 include $(top_srcdir)/build/Makefile.am.common
 include $(srcdir)/Makefile.am.features
 
+EXTRA_DIST += Makefile.win32      Makefile.win32.features
+MAINTAINERCLEANFILES += $(srcdir)/Makefile.win32.features
+
 AM_CPPFLAGS = -I$(srcdir) $(CAIRO_CFLAGS)
 
 if OS_WIN32
@@ -10,9 +13,8 @@ export_symbols = -export-symbols cairo.def
 cairo_def_dependency = cairo.def
 endif
 
-EXTRA_DIST += Makefile.win32
-EXTRA_DIST           += cairo-supported-features.h cairo-features-win32.h Makefile.win32.config
-MAINTAINERCLEANFILES += cairo-supported-features.h $(srcdir)/cairo-features-win32.h $(srcdir)/Makefile.win32.config
+EXTRA_DIST           += cairo-supported-features.h cairo-features-win32.h
+MAINTAINERCLEANFILES += cairo-supported-features.h $(srcdir)/cairo-features-win32.h
 
 $(top_builddir)/config.h: $(top_srcdir)/config.h.in
 	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) config.h
