[test] Add a test case for create_similar(CONTENT_ALPHA)
Application of a pure-alpha similar source is inconsistently handled
across the backends. The PDF/PS backends allow the rgb channels to bleed
through and the SVG backend mixes in pure white.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -8,6 +8,7 @@ a1-image-sample$(EXEEXT)				\
 a1-mask$(EXEEXT)					\
 a1-traps-sample$(EXEEXT)				\
 a8-mask$(EXEEXT)					\
+alpha-similar$(EXEEXT)					\
 big-line$(EXEEXT)					\
 big-trap$(EXEEXT)					\
 bilevel-image$(EXEEXT)					\
@@ -291,6 +292,8 @@ REFERENCE_IMAGES = \
 	a1-mask-ref.png	\
 	a1-traps-sample-ref.png		\
 	a8-mask-ref.png	\
+	alpha-similar-ref.png	\
+	alpha-similar-rgb24-ref.png	\
 	big-line-ref.png		\
 	big-line-rgb24-ref.png		\
 	big-line-ps-ref.png		\
