[test] Rename mask-ctm-* to avoid conflict with mask-ctm.
Using mask-ctm-image as a test name was causing a naming conflict with
mask-ctm, so rename the new tests.

--- a/test/.gitignore
+++ b/test/.gitignore
@@ -120,9 +120,9 @@ long-lines
 mask
 mask-alpha
 mask-ctm
-mask-ctm-image
-mask-ctm-similar
 mask-surface-ctm
+mask-transformed-image
+mask-transformed-similar
 meta-surface-pattern
 miter-precision
 move-to-show-surface
