Ignore generated files.
I know that I didn't create these Makefile.win32.features files,
so I assume that they are the result of Behdad's build magic and
that he just forgot to add them to .gitignore.

--- a/boilerplate/.gitignore
+++ b/boilerplate/.gitignore
@@ -3,7 +3,9 @@ tags
 Makefile
 Makefile.in
 Makefile.am.config
+Makefile.am.features
 Makefile.win32.config
+Makefile.win32.features
 *.lo
 *.la
 *.exe
