--- a/src/.gitignore
+++ b/src/.gitignore
@@ -3,7 +3,9 @@
 Makefile
 Makefile.in
 Makefile.am.config
+Makefile.am.features
 Makefile.win32.config
+Makefile.win32.features
 *.gcda
 *.gcno
 *.la
