Mark degenerate-path and miter-precision as XFAIL.
These two tests currently fail only for the PS backend,
but they've done so since before the last major release.
The final image result we're getting is definitely wrong
in both cases, but we have not yet been able to verify
if this is due to bugs in cairo (generating PostScript)
or in ghostscript (interpreting and rasterzing the
PostScript).

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -781,11 +781,13 @@ alpha-similar$(EXEEXT)				\
 big-line$(EXEEXT)				\
 big-trap$(EXEEXT)				\
 bitmap-font$(EXEEXT)				\
+degenerate-path$(EXEEXT)			\
 extend-pad$(EXEEXT)				\
 filter-nearest-offset$(EXEEXT)			\
 filter-bilinear-extents$(EXEEXT)		\
 large-source$(EXEEXT)				\
 long-lines$(EXEEXT)				\
+miter-precision$(EXEEXT)			\
 operator$(EXEEXT)				\
 operator-alpha$(EXEEXT)				\
 self-copy-overlap$(EXEEXT)			\
