--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -100,6 +100,8 @@ cairo_sources = \
 	cairo-debug.c \
 	cairo-fixed.c \
 	cairo-font-face.c \
+	cairo-font-face-twin.c \
+	cairo-font-face-twin-data.c \
 	cairo-font-options.c \
 	cairo-freelist.c \
 	cairo-gstate.c \
