--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -782,6 +782,7 @@ big-line$(EXEEXT)				\
 big-trap$(EXEEXT)				\
 bitmap-font$(EXEEXT)				\
 degenerate-path$(EXEEXT)			\
+device-offset-scale$(EXEEXT)			\
 extend-pad$(EXEEXT)				\
 filter-nearest-offset$(EXEEXT)			\
 filter-bilinear-extents$(EXEEXT)		\
