Automate error checking for fallback-resolution.
For this we extend the boilerplate get_image() routines to extract a
single page out of a paginated document and then proceed to manually
check each page of the fallback-resolution test.

(Well that's the theory, in practice SVG doesn't support multiple pages
and so we just generate a new surface for each resolution. But the
infrastructure is in place so that we can automate other tests,
e.g. test/multi-pages.)

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -435,6 +435,12 @@ REFERENCE_IMAGES = \
 	extend-reflect-ps3-ref.png \
 	extend-repeat-ref.png	\
 	extend-repeat-similar-ref.png	\
+	fallback-resolution-ppi37.5-ref.png \
+	fallback-resolution-ppi72-ref.png \
+	fallback-resolution-ppi75-ref.png \
+	fallback-resolution-ppi150-ref.png \
+	fallback-resolution-ppi300-ref.png \
+	fallback-resolution-ppi600-ref.png \
 	fill-alpha-ref.png	\
 	fill-alpha-pattern-ref.png	\
 	fill-alpha-pattern-pdf-argb32-ref.png	\
