[perf] Add rounded rectangle perf case.
Add the performance test case to compare the speed of filling a rounded
rectangle (one with camphered corners) as opposed to an ordinary
rectangle. Since the majority of the pixels are identical, ideally the two
cases would take similar times (modulo the additional overhead in the more
complex path).

--- a/perf/Makefile.am
+++ b/perf/Makefile.am
@@ -25,6 +25,7 @@ cairo_perf_SOURCES =		\
 	paint-with-alpha.c	\
 	pattern_create_radial.c \
 	rectangles.c		\
+	rounded-rectangles.c	\
 	stroke.c		\
 	subimage_copy.c		\
 	tessellate.c		\
